fix: unsupported decoration type on safari

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ a{
 
 a:hover{
     text-decoration: underline dotted;
+       text-decoration-line: underline;
+    text-decoration-style: dotted;
 }
 
 @keyframes fadeIn {
@@ -69,6 +71,10 @@ a:hover{
     
 .nav-header a{
     text-decoration: underline dotted 4px;
+    text-decoration-line: underline;
+    text-decoration-style: dotted;
+    text-decoration-thickness: 4px;
+    -webkit-text-decoration-thickness: 4px; 
     color: #281A13;
     cursor: pointer;
 }
